# scaler

./: .clang-format  .flake8  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  check.py  documentation.md  download_dependencies.sh  init.txt  pyproject.toml  requirements.txt  run_cluster.py  run_object_storage_server.py  run_scheduler.py  run_symphony_cluster.py  run_symphony_worker.py  run_top.py  run_webui.py  scheduler  setup.py  shutff  shutff.py  version.h.in  x
.github/workflows/: codeql.yml  (+4 more)
benchmarks/: dask_local_test.py  dask_remote_test.py  scaler_test.py
docs/: requirements_docs.txt
examples/: disconnect_client.py  graphtask_client.py  graphtask_nested_client.py  map_client.py  nested_client.py  pillow.py  readme.md  requirements.txt  seam_carving.py  send_object_client.py  simple_client.py  simple_cluster.py  simple_scheduler.py  timeseries.py
old/: main.cpp.old
scaler/: CMakeLists.txt  __init__.py  about.py
scaler/client/: client.py  future.py  object_buffer.py  object_instruction_buffer.py  object_reference.py
scaler/client/agent/: client_agent.py  disconnect_manager.py  future_manager.py  heartbeat_manager.py  mixins.py  object_manager.async.py  object_manager.py  task_manager.py
scaler/client/serializer/: default.py  mixins.py
scaler/cluster/: cluster.py  combo.py  object_storage_server.py  scheduler.py
scaler/entry_points/: cluster.py  object_storage_server.py  scheduler.py  symphony_cluster.py  symphony_worker.py  top.py  webui.py
scaler/io/: async_binder.py  async_connector.py  async_object_storage_connector.py  build.py  config.py  decl.cpp  errors.py  model.py  sync_connector.py  sync_object_storage_connector.py  sync_subscriber.py  utility.py
scaler/io/cpp/: CMakeLists.txt  build.py  doc.md  errors.py  ffi.py
scaler/io/cpp/src/: client.cpp  client.h  client.hpp  common.h  common.hpp  connector.cpp  connector.hpp  defs.h  example.cpp  intra_process.cpp  intra_process.h  intra_process.hpp  intra_process_connector.cpp  intra_process_connector.hpp  io_context.cpp  io_context.hpp  main.cpp  main.cpp.old  main.h  main.h.old  main.hpp  network_connector.cpp  network_connector.hpp  session.cpp  session.h  session.hpp
scaler/io/ymq/: CMakeLists.txt  bytes.h  bytes.hpp  common.h  configuration.h  configuration.hpp  coro_awaitable.h  coro_context.cpp  coro_context.h  coro_task.h  defs.h  epoll_context.cpp  epoll_context.h  epoll_context.hpp  event_loop.cpp  event_loop.h  event_loop.hpp  event_loop_backend.h  event_loop_thread.cpp  event_loop_thread.h  event_loop_thread.hpp  event_manager.cpp  event_manager.h  event_manager.hpp  file_descriptor.h  file_descriptor.hpp  interruptive_concurrent_queue.h  interruptive_concurrent_queue.hpp  io_context.cpp  io_context.h  io_socket.cpp  io_socket.h  io_socket.hpp  main.h  main.hpp  message_connection.h  message_connection.hpp  message_connection_tcp.cpp  message_connection_tcp.h  message_connection_tcp.hpp  (+17 more)
scaler/io/ymq/examples/: CMakeLists.txt  echo_client.cpp  echo_server.cpp  timed_queue.cpp  timestamp.cpp
scaler/io/ymq/pymod_ymq/: async.h  bytes.cpp  bytes.h  io_context.cpp  io_context.h  io_socket.cpp  io_socket.h  message.h  py_bytes.cpp  py_io_context.cpp  py_io_socket.cpp  py_message.cpp  ymq.cpp  ymq.h
scaler/object_storage/: CMakeLists.txt  __init__.py  client.cpp  constants.h  defs.h  io_helper.cpp  io_helper.h  object_instruction_header.capnp  object_storage_server.cpp  object_storage_server.h  object_storage_server.py  pymod_object_storage_server.cpp  server.cpp  server.h  server.py  server_as_so.cpp  server_as_so.h
scaler/object_storage/tests/: CMakeLists.txt  test_scaler_object.cpp  test_scaler_so.cpp  test_server_main.cpp  test_update_record.cpp
scaler/protocol/: introduction.md  worker.md
scaler/protocol/capnp/: _python.py  common.capnp  message.capnp  object_instruction_header.capnp  object_storage.capnp  status.capnp
scaler/protocol/python/: common.py  message.py  mixins.py  object_storage.py  status.py
scaler/scheduler/: client_manager.py  config.py  graph_manager.py  mixins.py  object_manager.py  scheduler.py  status_reporter.py  task_manager.py  worker_manager.py
scaler/scheduler/allocators/: mixins.py  queued.py  tagged_allocator.py
scaler/scheduler/object_usage/: object_tracker.py
scaler/ui/: constants.py  live_display.py  memory_window.py  setting_page.py  task_graph.py  task_log.py  utility.py  webui.py  worker_processors.py
scaler/utility/: DenseUniqueValueMap.h  debug.py  event_list.py  event_loop.py  exceptions.py  formatter.py  identifiers.py  many_to_many_dict.py  mixins.py  network_util.py  object_id.py  object_storage_config.py  object_utility.py  one_to_many_dict.py  serialization.py  zmq_config.py
scaler/utility/graph/: optimization.py  topological_sorter.py  topological_sorter_graphblas.py
scaler/utility/logging/: decorators.py  scoped_logger.py  utility.py
scaler/utility/metadata/: profile_result.py  task_flags.py
scaler/utility/queues/: async_indexed_queue.py  async_priority_queue.py  async_sorted_priority_queue.py  indexed_queue.py
scaler/worker/: worker.py
scaler/worker/agent/: heartbeat_manager.py  mixins.py  object_tracker.py  processor_holder.py  processor_manager.py  profiling_manager.py  task_manager.py  timeout_manager.py
scaler/worker/agent/processor/: object_cache.py  processor.py
scaler/worker/symphony/: heartbeat_manager.py  session_callback.py  task_manager.py  worker.py
scripts/: build.sh  download_dependencies.sh  download_install_dependencies.sh
tests/: CMakeLists.txt  test_async_indexed_queue.py  test_async_priority_queue.py  test_async_sorted_priority_queue.py  test_balance.py  test_client.py  test_cluster.py  test_death_timeout.py  test_examples.py  test_future.py  test_graph.py  test_indexed_queue.py  test_nested_task.py  test_object_usage.py  test_profiling.py  test_protected.py  test_serializer.py  test_tagged_allocator.py  test_ui.py  test_worker_object_tracker.py  utility.py
tests/object_storage/: CMakeLists.txt  __init__.py  test_scaler_object.cpp  test_update_record.cpp
(+16 files in other folders)
