[build-system]
requires = ["scikit-build-core>=0.5.0", "setuptools-scm", "mypy", "black", "flake8", "pyproject-flake8"]
build-backend = "scikit_build_core.build"

[project]
name = "scaler"
description = "Scaler Distribution Framework"
requires-python = ">=3.8"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache 2.0" }
authors = [{ name = "Citi", email = "opensource@citi.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: System :: Distributed Computing",
]
dynamic = ["version"]
dependencies = [
    "bidict", 
    "cloudpickle",
    "graphlib-backport; python_version < '3.9'",
    "psutil",
    "pycapnp",
    "pyzmq",
    "tblib",
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
regex = '(?P<value>\d+\.\d+\.\d+(\.[1-9]\d*)?)'
input = "./scaler/about.py"

[project.urls]
Home = "https://github.com/Citi/scaler"

[project.scripts]
scaler_scheduler = "scaler.entry_points.scheduler:main"
scaler_cluster = "scaler.entry_points.cluster:main"
scaler_symphony_cluster = "scaler.entry_points.symphony_cluster:main"
scaler_top = "scaler.entry_points.top:main"
scaler_ui = "scaler.entry_points.webui:main"
scaler_object_storage_server = "scaler.entry_points.object_storage_server:main"

[project.optional-dependencies]
uvloop = ["uvloop"]
graphblas = ["python-graphblas", "numpy"]
gui = ["nicegui[plotly]"]
all = ["python-graphblas", "numpy", "uvloop", "nicegui[plotly]"]

[tool.scikit-build]
wheel.packages = ["scaler"]
build.targets=["server"]

[tool.mypy]
no_strict_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "^docs.*$",
    "^benchmark.*$",
    "^venv.*$",
    "migrations",
    "__pycache__",
    "^build.*$",
    "^capnproto.*$",
    "^boost.*$",
    "^scripts.*$"
]

[tool.flake8]
count = true
statistics = true
max-line-length = 120
extend-ignore = ["E203"]
exclude = [
    "migrations",
    "__pycache__",
    "./build",
    "./capnproto*",
    "./boost*",
    "./scripts",
    "venv*"
]

[tool.black]
line-length = 120
skip-magic-trailing-comma = true

