[build-system]
requires = ["scikit-build-core>=0.5.0", "setuptools-scm", "mypy", "black", "flake8", "pyproject-flake8"]
build-backend = "scikit_build_core.build"

[project]
name = "scaler"
description = "Scaler Distribution Framework"
requires-python = ">=3.10"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache 2.0" }
authors = [{ name = "Citi", email = "opensource@citi.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: System :: Distributed Computing",
]
dynamic = ["version"]
dependencies = [
    "bidict", 
    "cloudpickle",
    "psutil==7.0.0",
    "pycapnp==2.0.0",
    "pyzmq",
    "tblib",
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
regex = '(?P<value>\d+\.\d+\.\d+(\.[1-9]\d*)?)'
input = "./scaler/version.txt"

[project.urls]
Home = "https://github.com/Citi/scaler"

[project.scripts]
scaler_scheduler = "scaler.entry_points.scheduler:main"
scaler_cluster = "scaler.entry_points.cluster:main"
scaler_symphony_cluster = "scaler.entry_points.symphony_cluster:main"
scaler_top = "scaler.entry_points.top:main"
scaler_ui = "scaler.entry_points.webui:main"
scaler_object_storage_server = "scaler.entry_points.object_storage_server:main"

[project.optional-dependencies]
uvloop = ["uvloop"]
graphblas = ["python-graphblas", "numpy==2.2.5"]
gui = ["nicegui[plotly]==2.20.0"]
all = ["python-graphblas", "numpy==2.2.5", "uvloop", "nicegui[plotly]==2.20.0"]

[tool.scikit-build]
wheel.packages = ["scaler"]
build.targets=["cc_object_storage_server", "ymq", "object_storage_server"]

[tool.mypy]
no_strict_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "^docs.*$",
    "^benchmark.*$",
    "^venv.*$",
    "migrations",
    "__pycache__",
    "^build.*$",
    "^capnproto.*$",
    "^boost.*$",
    "^scripts.*$",
    ".*object_storage.*$",
]

[tool.flake8]
count = true
statistics = true
max-line-length = 120
extend-ignore = ["E203"]
exclude = [
    "migrations",
    "__pycache__",
    "./build",
    "./capnproto*",
    "./boost*",
    "./scripts",
    "venv*"
]

[tool.black]
line-length = 120
skip-magic-trailing-comma = true

